2006
Using trunk, I just get a compiler error but no exception:
```scala
Test.scala:6: error: class C needs to be abstract, since method run in trait A of type (x$$1: T)Unit is not defined
class C extends B {
      ^
```
Apart from that, see Martin's comment at scala/bug#1737.
